# FollowLang

./: AGENTS.md  README.md  WHITEPAPER.md  atom.ebnf  followlang.dll.exp  followlang.dll.lib  libfollow_lang.rlib
.infinitum/: AETHER.md  AGENTS.md  CANOR.md  NOVUS.md  TEMPUS.md
.shared/: AGENTS.md  CMakeLists.txt  aether.c  aether.h  build.sh  canor.c  canor.h  envoy.c  envoy.h  export.h  gui.c  gui.h  infinitum.c  infinitum.h  infinitum_gui.c  novus.c  novus.h  novus16.h  novus32.h  novus64.h  novus8.h  tempus.c  tempus.h
.shared/aliquid.kiwi/: AGENTS.md  generator.h  liquifier.h  report.h  tokenizer.h
.shared/aliquid.kiwi/squashkiwi/: AGENTS.md  kiwi.h  kiwigen.h  squash.h  squashkiwi.h
core/: AGENTS.md  README.md  action.h  elite.h  ether.h  flow.h  follower.h  maneuver.h  united.h
core/flow/: AGENTS.md
data/: default.fwb  default.fwh  default.fwo  default.fwp  default.fws
lang/: AGENTS.md  fwb.rs  fwh.rs  fwp.rs  fws.rs
lang/fwh/: expr.rs  markov.rs  numeric.rs  physical.rs  tensor.rs  unit.rs
lib/: ASIC.pas  ASICHighlightReel.lfm  ASICHighlightReel.pas  ASICLogin.lfm  ASICLogin.pas  ASICPrompter.lfm  ASICPrompter.pas  ASICTools.lfm  ASICTools.pas  ASICWorkshop.lfm  ASICWorkshop.pas  FollowLang_FFI.pas  followlang.lpi  followlang.lpr  followlang.lps  followlang.res
src/: AGENTS.md  ffi.rs  lexer.rs  lib.rs  main.rs  math.rs  parser.rs  registry.rs  semantic.rs
src/.backup/: ast.rs  ffi.rs  lib.rs  main.rs  mwp_follower.rs  parser.rs
src/aetea/: action.rs  elite.rs  ether.rs  flow.rs  follower.rs  lib.rs  main.rs  united.rs  (+1 more)
tmp/: library.fws
(+8 files in other folders)
